--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+# Datasource (MySQL ver x.x)
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# make sure to replace the db name musikdb for the one you use, and the username/password
+spring.datasource.url=jdbc:mysql://localhost:3306/musikdb?useSSL=false&serverTimezone=America/Mexico_City&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=My.test2022
 
+#JPA
+spring.jpa.generate-ddl=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+
+#Table names physically
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
